[package]
name = "lib_futures"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
futures.workspace = true
parking_lot.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "tee_bench"
harness = false
